archived notes
archived notes

Download final project
Read final project
list out what you need to do to accomplish the task


Pre-req - fire up server - is it working?
no, not working. getting this error:

~/c/f2-pdx-simple-site finalproject ✖ node server4.js
/home/preet/cfprojects/f2-pdx-simple-site/server4.js:4

^
SyntaxError: Unexpected token ILLEGAL
    at exports.runInThisContext (vm.js:73:16)
    at Module._compile (module.js:443:25)
    at Object.Module._extensions..js (module.js:478:10)
    at Module.load (module.js:355:32)
    at Function.Module._load (module.js:310:12)
    at Function.Module.runMain (module.js:501:10)
    at startup (node.js:129:16)
    at node.js:814:3


/home/preet/cfprojects/f2-pdx-simple-site/assets/lib/f2search.js:2

^
SyntaxError: Unexpected token ILLEGAL
    at exports.runInThisContext (vm.js:73:16)
    at Module._compile (module.js:443:25)
    at Object.Module._extensions..js (module.js:478:10)
    at Module.load (module.js:355:32)
    at Function.Module._load (module.js:310:12)
    at Module.require (module.js:365:17)
    at require (module.js:384:17)
    at Object.<anonymous> (/home/preet/cfprojects/f2-pdx-simple-site/server4.js:11:16)
    at Module._compile (module.js:460:26)
    at Object.Module._extensions..js (module.js:478:10)

moved html files from index to app. but this looks like a server problem. trying again.

moved files back. changed "/app/" to "/". same error. commented out dependent file requiring f2search to make it more simple and still getting it


